Fix: Main container fit to screen to prevent overflow Add: EJS function and build content for dynamic content display Fix: Few bloatware and directories

--- a/public/index/css/styles.css
+++ b/public/index/css/styles.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   font-family: "Poppins", sans-serif;
   box-sizing: border-box;
-  overflow: hidden;
+  overflow: auto;
   height: 100vh;
 }
 
@@ -261,7 +261,7 @@ main {
   flex-direction: column;
   align-items: left;
   width: calc(100vw - 300px);
-  height: 100vh;
+  height: calc(100vh - 80px);
   padding: 20px;
 }
 
